<resources>
    <string name="app_name">MatrixTool</string>

    <string name="public_service">公有云</string>
    <string name="private_service">私有云</string>

    <string name="main_domain">主域名称</string>
    <string name="main_domain_id">主域ID</string>
    <string name="mode">云服务模式</string>
    <string name="region">云服务区域</string>
    <string name="router_address">云服务Router</string>
    <string name="gateway_address">云服务Gateway</string>

    <string name="local">局域网</string>

    <string name="cloud">云服务</string>

    <string name="device_control">设备控制</string>
    <string name="cloud_message">云端指令</string>
    <string name="send">发送</string>
    <string name="device_management">设备管理</string>
    <string name="ota_upgrade">OTA升级</string>
    <string name="check_version_mcu">检查升级MCU</string>
    <string name="confirm_upgrade_mcu">确认推送升级MCU</string>
    <string name="check_version_wifi">检查升级WIFI</string>
    <string name="confirm_upgrade_wifi">确认推送升级WIFI</string>
    <string name="local_scan">局域网发现</string>
    <string name="empty_list">无%1$s，下拉刷新</string>
    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="device_bind">设备绑定</string>
    <string name="subdomain_can_not_empty">子域名不能为空</string>
    <string name="physical_id_can_not_empty">物理ID不能为空</string>
    <string name="subdomain">子域名</string>
    <string name="physical_id">物理ID</string>
    <string name="device_name">设备名称</string>
    <string name="bind">绑定</string>
    <string name="others">其他</string>
    <string name="ablelink">智能配网</string>
    <string name="aplink">AP配网</string>
    <string name="ssid">WIFI</string>
    <string name="password">密码</string>
    <string name="start_link">开始配网</string>
    <string name="device_data">设备数据</string>
    <string name="list_devices_error">获取设备列表失败</string>
    <string name="subscribe">订阅</string>
    <string name="cancel_subscribe">取消订阅</string>
    <string name="scan_linking">扫描配网</string>
    <string name="scan_all">扫描全部</string>
    <string name="local_message">局域网指令</string>
    <string name="physical_device_id">设备物理Id:%1$s</string>
    <string name="device_ap_confirm">请确认已连接设备AP热点</string>
    <string name="device_type">设备类型</string>
    <string name="sign_up">注册</string>
    <string name="type_your_phone">请输入手机号</string>
    <string name="type_ver_code">请输入验证码</string>
    <string name="type_password">请输入密码</string>
    <string name="fetch_ver_code">获取验证码</string>
    <string name="user_module">用户相关</string>
    <string name="account">账号</string>
    <string name="ver_code_sent">验证码已发送</string>
    <string name="sign_up_check_tips">手机号、验证码、密码均不能为空</string>
    <string name="sign_up_done">注册成功，请登录</string>
    <string name="sign_in_check_tips">账号、密码均不能为空</string>
    <string name="sign_in_success">登录成功</string>
    <string name="logout_first">请先登出</string>
    <string name="sign_out">登出</string>
    <string name="sign_out_success">登出成功</string>
    <string name="login_first">请先登录</string>
    <string name="who_login">登录（%1$s）</string>
    <string name="get_wifi_list">点击获取设备可连WIFI列表</string>
    <string name="wifi_list">设备可连WIFI列表</string>
    <string name="input_wifi_pwd">请输入密码</string>
    <string name="send_success">ssid和密码发送成功</string>
    <string name="loading_available_wifi_list">正在获取设备可连WIFI列表</string>
    <string name="sending_ssid_pwd">正在发送ssid和密码</string>
    <string name="clean_cache">清除缓存</string>
    <string name="global">国际化</string>
    <string name="global_able_link">国际化智能配网</string>
    <string name="global_ap_link">国际化AP配网</string>

</resources>
