<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/subDomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subdomain" />

    <EditText
        android:id="@+id/physicalId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/physical_id" />

    <EditText
        android:id="@+id/devieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name" />

    <Button
        android:id="@+id/bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind" />
</LinearLayout>