<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_domain" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_domain_id" />
    </android.support.design.widget.TextInputLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/mode" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/region" />

    <Button
        android:id="@android:id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok" />
</LinearLayout>