<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ssid" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/device_type" />

    <Button
        android:id="@+id/start_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_link" />

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical|horizontal"
        android:background="@android:color/background_light" />
</LinearLayout>