<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_domin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_dominname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_domain" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_subdomin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_domin">

        <EditText
            android:id="@+id/et_dominid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_domain_id" />
    </android.support.design.widget.TextInputLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_subdomin"
        app:ms_hint="@string/mode" />

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:ms_hint="国家代码" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintTop_toBottomOf="@id/country" />

</android.support.constraint.ConstraintLayout>